# the-mastery-lab

./: .gitignore  README.md
ai-pydantic-ai-experiment/: README.md  hello_world.py  ollama_card_transactions_agent.py  pyproject.toml
celery-scraper/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
celery-scraper/docs/: plan.md
celery-scraper/src/app/: beat_schedule.py  celery_app.py  config.py
celery-scraper/src/app/api/: main.py  routes.py  schemas.py
celery-scraper/src/app/storage/: json_store.py
celery-scraper/src/app/tasks/: __init__.py  fetch.py  pipelines.py  process.py  store.py
celery-scraper/tests/: conftest.py
celery-scraper/tests/test_api/: test_routes.py
celery-scraper/tests/test_tasks/: test_fetch.py  test_process.py
experiments/grpc-go-python-bookmarks/python-server/: Makefile  README.md  pyproject.toml
experiments/grpc-go-python-bookmarks/python-server/src/app/: __init__.py  server.py  service.py  store.py
experiments/grpc-go-python-bookmarks/python-server/tests/: test_service.py
fakeflix-foundations-of-enterprise-software-development/: README.md  docker-compose.yaml
fast-api-dependency-injection-poc/: README.md  app.py  app_issue_1.py  pyproject.toml  rest.py  services.py
fast-api-dependency-injection-poc/experiment_n2/: di.py  main.py  services.py
fast-api-dependency-injection-poc/experiment_n2/tests/: test_app.py
fast-api-dependency-injection-poc/experiment_n3/: di.py  main.py
fast-api-dependency-injection-poc/experiment_n3/tests/: test_app.py
fast-api-mount-flask-app-poc/: README.md  app.py  pyproject.toml
flask-dependency-injection-poc/: README.md  app.py  app_3_fastdepends.py  pyproject.toml  test_app.py  test_app_3_fastdepends.py
flask-dependency-injection-poc/.devcontainer/: devcontainer.json
knowledge-base/: Docker 101.md
prototypes/fhir-platform/: .env.example  .gitignore  ARCHITECTURE.md  NOTES.md  README.md  docker-compose.yml  pyproject.toml
prototypes/fhir-platform/agent/plans/: advanced-and-or-filtering.md
prototypes/fhir-platform/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
prototypes/fhir-platform/frontend/src/: App.vue  style.css
prototypes/fhir-platform/frontend/src/api/: index.ts  types.ts
prototypes/fhir-platform/frontend/src/components/: FacetPanel.vue  OmopChart.vue  PatientCard.vue
prototypes/fhir-platform/frontend/src/router/: index.ts
prototypes/fhir-platform/frontend/src/stores/: patientSearch.ts
prototypes/fhir-platform/frontend/src/views/: OmopChatView.vue  PatientDetailView.vue  PatientListView.vue
prototypes/fhir-platform/scripts/: fhir_to_omop.py  ingest_bundles.py
prototypes/fhir-platform/src/app/: config.py  dependencies.py
prototypes/fhir-platform/src/app/api/: main.py  omop_routes.py  routes.py  schemas.py
prototypes/fhir-platform/src/app/db/: models.py  session.py
prototypes/fhir-platform/src/app/ingestion/: bundle_parser.py  fhir_client.py  import_tracker.py  source_reader.py
prototypes/fhir-platform/src/app/omop/: models.py  session.py
prototypes/fhir-platform/src/app/projection/: search_projector.py
prototypes/fhir-platform/tests/: conftest.py
prototypes/fhir-platform/tests/test_api/: test_routes.py
prototypes/fhir-platform/tests/test_ingestion/: test_bundle_parser.py  test_import_tracker.py  test_source_reader.py
prototypes/fhir-platform/tests/test_projection/: test_search_projector.py
prototypes/pydantic-headless-cms/: main.py  pyproject.toml
prototypes/pydantic-headless-cms/client/: package-lock.json  package.json
prototypes/pydantic-headless-cms/client/src/: App.vue
prototypes/pydantic-headless-cms/client/src/api/: client.ts
prototypes/pydantic-headless-cms/client/src/router/: index.ts
prototypes/pydantic-headless-cms/client/src/views/: ContentTypesView.vue  ContentView.vue
prototypes/pydantic-headless-cms/demo-website/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
prototypes/pydantic-headless-cms/demo-website/src/: App.vue
prototypes/pydantic-headless-cms/demo-website/src/api/: cms.ts
prototypes/pydantic-headless-cms/demo-website/src/router/: index.ts
prototypes/pydantic-headless-cms/demo-website/src/views/: BlogPostDetailView.vue  BlogPostsView.vue
prototypes/pydantic-headless-cms/pydantic_cms/: __init__.py  cms.py  field_types.py  models.py  repository.py  sqlite.py
prototypes/pydantic-headless-cms/schemas/: base-content.schema.yml  blog-post.schema.yml  event.schema.yml
prototypes/pydantic-headless-cms/server/: .gitignore  README.md  api.py  main.py  migrate_schemas.py  pyproject.toml
prototypes/pydantic-headless-cms/server/pydantic_cms/: __init__.py  builder.py  cms.py  field_types.py  fs_repository.py  schema_loader.py  sqlite.py  storage.py
prototypes/pydantic-headless-cms/server/tests/: conftest.py  test_builder.py  test_cms.py  test_repository.py
prototypes/pydantic-headless-cms/tests/: conftest.py  test_field_types.py  test_models.py  test_repository.py
py-docker-sdk/: README.md  main.py  (+2 more)
py-sqlalchemy-peewee-shared-db-conn/: README.md  docker-compose.yaml  pyproject.toml  test_main.py
templates/py-poetry-fastapi-sqlalchemy/: .gitignore  README.md  pyproject.toml
templates/py-poetry-fastapi-sqlalchemy/migrations/: env.py
templates/py-poetry-fastapi-sqlalchemy/src/: database.py  main.py  models.py
templates/py-uv-fastapi-sqla/: .env.example  README.md  docker-compose.yml  pyproject.toml
templates/py-uv-fastapi-sqla/alembic/: env.py
templates/py-uv-fastapi-sqla/alembic/versions/: 0f60b9fc01d8_initial_migration.py
templates/py-uv-fastapi-sqla/docs/: devlog.md
templates/py-uv-fastapi-sqla/src/app/: config.py  dependencies.py  main.py  services.py
templates/py-uv-fastapi-sqla/src/app/db/: models.py  session.py
templates/py-uv-fastapi-sqla/tests/: conftest.py  test_main.py
templates/py-uv-fastapi-sqla/tests/db/: test_database.py
templates/py-uv-fastapi-sqla/tests/services/: test_user_service.py
websocket-fastapi-poc/: README.md  main.py  pyproject.toml  test_main.py
(+64 files in other folders)
