[project]
name = "celery-scraper"
version = "0.1.0"
description = "Learning project: Celery task queue with FastAPI and Hacker News API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.0",
    "pydantic-settings>=2.9.0",
]

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.6",
    "flower>=2.0.0",
]
