[tool.poetry]
name = "fast-api-dependency-injection-poc"
version = "0.1.0"
description = ""
package-mode = false
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
