[tool.poetry]
name = "py-poetry-fastapi-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = "^2.0.36"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
alembic = "^1.14.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
