[project]
name = "py-uv-fastapi-sqla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jonathan", email = "jonathanfmach@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.9.0",
    "sqlalchemy>=2.0.40",
]


# [project.scripts]
# dev = "py_uv_fastapi_sqla:main:app --reload"

[tool.ruff]
line-length = 120


[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5", "ruff>=0.11.6"]
